<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/element_cf_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="302dp"
            android:layout_height="154dp"
            android:layout_gravity="center"
            android:src="@drawable/element_ft_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="122dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_id"
            style="@style/MY.EditText.Style"
            android:layout_width="288dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:hint="@string/id_hint"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/login_pw" />

        <TextView
            android:id="@+id/login_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:text="잘못된 로그인 정보입니다."
            android:textColor="@color/red"
             android:visibility="invisible" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <EditText
            android:id="@+id/login_pw"
            style="@style/MY.EditText.Style"
            android:layout_width="288dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/pw_hint"
            android:inputType="textPassword" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="288dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:background="@drawable/element_box_hex_red"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/intro_font_size" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="@dimen/intro_font_size" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/white" >
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pw"
                android:textColor="@color/white"
                android:textSize="@dimen/intro_font_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>