<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.4"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"  >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/birth" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="132dp"
                android:calendarViewShown="false"
                android:minDate="19000101" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" 
            android:padding="5dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <!-- <NumberPicker -->
            <!-- android:layout_width="wrap_content" -->
            <!-- android:layout_height="48dp" /> -->

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cm" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" 
            android:padding="5dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/weight" />
			<EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" 
            android:padding="5dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_goal" />

            <NumberPicker
                android:id="@+id/act_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="보" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" 
            android:padding="5dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/sleep_goal" />
 			<NumberPicker
                android:id="@+id/goal_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="시간" />
            <NumberPicker
                android:id="@+id/goal_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="분" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/white" 
            android:padding="5dp" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/unit" />

            <TextView
                android:id="@+id/unit_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Cm / Kg" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>